[tool.poetry]
name = "rsbcli"
version = "0.1.0"
description = "A RAM saving cli to run web applications"
authors = ["Avanindra Chakraborty, Arghya Sarkar"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
PyQt5 = "^5.15.4"
PyQtWebEngine = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
