[tool.poetry]
name = "rsbcli"
version = "0.1.3"
description = "A RAM saving cli to run web applications"
authors = ["Avanindra Chakraborty <avanindra.d2.chakraborty@gmail.com>"]
license = "MIT"
readme="README.md"
homepage= "https://github.com/AvanindraC/RSB"
repository = "https://github.com/AvanindraC/RSB"
keywords = ["RSBCLI"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
PyQt5 = "^5.15.4"
PyQtWebEngine = "^5.15.4"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
rsb = "RSBCLI:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
